--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,9 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.local
+.env.development
+.env.production
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
