เพิ่มการตั้งค่า TypeScript และประกาศโมดูล MapLibre GL

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "strict": true,
     "skipLibCheck": true,
+    "moduleResolution": "node",
     "types": [
       "node"
     ],
