--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nuxtjs/tailwindcss": "^6",
     "daisyui": "^3",
     "maplibre-gl": "^5.1.1",
+    "marked": "^15.0.11",
     "nuxt": "^3",
     "pinia": "^3.0.1"
   },
