--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@nuxt/ui": "^2.21.0",
     "@nuxtjs/tailwindcss": "^6",
     "@vueuse/head": "^2.0.0",
+    "cheerio": "^1.1.0",
     "daisyui": "^3",
     "maplibre-gl": "^5.1.1",
     "marked": "^15.0.11",
